_generated-doc/2.13/config/quarkus-smallrye-health.adoc

:summaryTableId: quarkus-smallrye-health
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-health_configuration]]link:#quarkus-smallrye-health_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.health.extensions.enabled]]`link:#quarkus-smallrye-health_quarkus.health.extensions.enabled[quarkus.health.extensions.enabled]`

[.description]
--
Whether extensions published health check should be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HEALTH_EXTENSIONS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HEALTH_EXTENSIONS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.health.openapi.included]]`link:#quarkus-smallrye-health_quarkus.health.openapi.included[quarkus.health.openapi.included]`

[.description]
--
Whether to include the Liveness and Readiness Health endpoints in the generated OpenAPI document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HEALTH_OPENAPI_INCLUDED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HEALTH_OPENAPI_INCLUDED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.root-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.root-path[quarkus.smallrye-health.root-path]`

[.description]
--
Root path for health-checking endpoints. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`health`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.liveness-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.liveness-path[quarkus.smallrye-health.liveness-path]`

[.description]
--
The relative path of the liveness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_LIVENESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_LIVENESS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`live`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.readiness-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.readiness-path[quarkus.smallrye-health.readiness-path]`

[.description]
--
The relative path of the readiness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_READINESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_READINESS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`ready`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.group-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.group-path[quarkus.smallrye-health.group-path]`

[.description]
--
The relative path of the health group endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_GROUP_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_GROUP_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`group`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.wellness-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.wellness-path[quarkus.smallrye-health.wellness-path]`

[.description]
--
The relative path of the wellness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_WELLNESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_WELLNESS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`well`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.startup-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.startup-path[quarkus.smallrye-health.startup-path]`

[.description]
--
The relative path of the startup health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_STARTUP_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_STARTUP_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`started`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.context-propagation]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.context-propagation[quarkus.smallrye-health.context-propagation]`

[.description]
--
Whether the context should be propagated to each health check invocation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_CONTEXT_PROPAGATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_CONTEXT_PROPAGATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.max-group-registries-count]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.max-group-registries-count[quarkus.smallrye-health.max-group-registries-count]`

[.description]
--
The number of the maximum health groups that can be created.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_MAX_GROUP_REGISTRIES_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_MAX_GROUP_REGISTRIES_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-smallrye-health_quarkus.smallrye-health.ui.enable]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.ui.enable[quarkus.smallrye-health.ui.enable]`

[.description]
--
If Health UI should be enabled. By default, Health UI is enabled if it is included (see `always-include`).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-smallrye-health_quarkus.smallrye-health.additional.property-additional-properties]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.additional.property-additional-properties[quarkus.smallrye-health.additional.property]`

[.description]
--
Additional top-level properties to be included in the resulting JSON object.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_ADDITIONAL_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_ADDITIONAL_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-smallrye-health_quarkus.smallrye-health.check.-check-.enabled]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.check.-check-.enabled[quarkus.smallrye-health.check."check".enabled]`

[.description]
--
Whether the HealthCheck should be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_CHECK__CHECK__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_CHECK__CHECK__ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-smallrye-health_quarkus.smallrye-health.ui-smallrye-health-ui-configuration]]link:#quarkus-smallrye-health_quarkus.smallrye-health.ui-smallrye-health-ui-configuration[SmallRye Health UI configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.ui.root-path]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.ui.root-path[quarkus.smallrye-health.ui.root-path]`

[.description]
--
The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`health-ui`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus.smallrye-health.ui.always-include]]`link:#quarkus-smallrye-health_quarkus.smallrye-health.ui.always-include[quarkus.smallrye-health.ui.always-include]`

[.description]
--
Always include the UI. By default, this will only be included in dev and test. Setting this to true will also include the UI in Prod

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ALWAYS_INCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ALWAYS_INCLUDE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===