_generated-doc/3.34/config/quarkus-smallrye-health.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-enabled]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-enabled[`+++quarkus.smallrye-health.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Activate or disable this extension. Disabling this extension means that no health related information is exposed.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-extensions-enabled]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-extensions-enabled[`+++quarkus.smallrye-health.extensions.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.extensions.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether extensions published health check should be enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_EXTENSIONS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_EXTENSIONS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-openapi-included]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-openapi-included[`+++quarkus.smallrye-health.openapi.included+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.openapi.included+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to include the Liveness and Readiness Health endpoints in the generated OpenAPI document


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_OPENAPI_INCLUDED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_OPENAPI_INCLUDED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-root-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-root-path[`+++quarkus.smallrye-health.root-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.root-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Root path for health-checking endpoints. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`. If the management interface is enabled, the value will be resolved as a path relative to `$++{++quarkus.management.root-path++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++health+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-liveness-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-liveness-path[`+++quarkus.smallrye-health.liveness-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.liveness-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The relative path of the liveness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_LIVENESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_LIVENESS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++live+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-readiness-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-readiness-path[`+++quarkus.smallrye-health.readiness-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.readiness-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The relative path of the readiness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_READINESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_READINESS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++ready+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-group-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-group-path[`+++quarkus.smallrye-health.group-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.group-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The relative path of the health group endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_GROUP_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_GROUP_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++group+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-wellness-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-wellness-path[`+++quarkus.smallrye-health.wellness-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.wellness-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The relative path of the wellness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_WELLNESS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_WELLNESS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++well+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-startup-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-startup-path[`+++quarkus.smallrye-health.startup-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.startup-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The relative path of the startup health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_STARTUP_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_STARTUP_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++started+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-max-group-registries-count]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-max-group-registries-count[`+++quarkus.smallrye-health.max-group-registries-count+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.max-group-registries-count+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The number of the maximum health groups that can be created.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_MAX_GROUP_REGISTRIES_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_MAX_GROUP_REGISTRIES_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-default-health-group]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-default-health-group[`+++quarkus.smallrye-health.default-health-group+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.default-health-group+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the default health group used when no other health group is defined on the health check.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_DEFAULT_HEALTH_GROUP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_DEFAULT_HEALTH_GROUP+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-management-enabled]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-management-enabled[`+++quarkus.smallrye-health.management.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.management.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If management interface is turned on the health endpoints and ui will be published under the management interface. This allows you to exclude Health from management by setting the value to false


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_MANAGEMENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_MANAGEMENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-include-problem-details]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-include-problem-details[`+++quarkus.smallrye-health.include-problem-details+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.include-problem-details+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify the reported DOWN responses should be aligned with RFC 9457 - Problem Details for HTTP APIs.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_INCLUDE_PROBLEM_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_INCLUDE_PROBLEM_DETAILS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-smallrye-health_quarkus-smallrye-health-ui-enabled]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-ui-enabled[`+++quarkus.smallrye-health.ui.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.ui.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If Health UI should be enabled. By default, Health UI is enabled if it is included (see `always-include`).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-smallrye-health_quarkus-smallrye-health-additional-property-property-name]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-additional-property-property-name[`+++quarkus.smallrye-health.additional.property."property-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.additional.property."property-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional top-level properties to be included in the resulting JSON object.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_ADDITIONAL_PROPERTY__PROPERTY_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_ADDITIONAL_PROPERTY__PROPERTY_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-smallrye-health_quarkus-smallrye-health-check-check-classname-enabled]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-check-check-classname-enabled[`+++quarkus.smallrye-health.check."check-classname".enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.check."check-classname".enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether the HealthCheck should be enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_CHECK__CHECK_CLASSNAME__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_CHECK__CHECK_CLASSNAME__ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-context-propagation]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-context-propagation[[.line-through]#`+++quarkus.smallrye-health.context-propagation+++`#]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.context-propagation+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
_This property is deprecated since `3.30`._

Whether the context should be propagated to each health check invocation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_CONTEXT_PROPAGATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_CONTEXT_PROPAGATION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-smallrye-health_quarkus-smallrye-health-ui-enable]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-ui-enable[[.line-through]#`+++quarkus.smallrye-health.ui.enable+++`#]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.ui.enable+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
_This property is deprecated since `3.26`: use `quarkus.smallrye-health.ui.enabled` instead._

If Health UI should be enabled. By default, Health UI is enabled if it is included (see `always-include`).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ENABLE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

h|[[quarkus-smallrye-health_section_quarkus-smallrye-health-ui]] [.section-name.section-level0]##link:#quarkus-smallrye-health_section_quarkus-smallrye-health-ui[SmallRye Health UI configuration]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-ui-root-path]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-ui-root-path[`+++quarkus.smallrye-health.ui.root-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.ui.root-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++health-ui+++`

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-health_quarkus-smallrye-health-ui-always-include]] [.property-path]##link:#quarkus-smallrye-health_quarkus-smallrye-health-ui-always-include[`+++quarkus.smallrye-health.ui.always-include+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.smallrye-health.ui.always-include+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Always include the UI. By default, this will only be included in dev and test. Setting this to true will also include the UI in Prod


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_HEALTH_UI_ALWAYS_INCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_HEALTH_UI_ALWAYS_INCLUDE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`


|===

